; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/formats/libchdr/extr_libchdr_bitstream.c_bitstream_overflow.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/formats/libchdr/extr_libchdr_bitstream.c_bitstream_overflow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bitstream = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bitstream_overflow(%struct.bitstream* %0) #0 {
  %2 = alloca %struct.bitstream*, align 8
  store %struct.bitstream* %0, %struct.bitstream** %2, align 8
  %3 = load %struct.bitstream*, %struct.bitstream** %2, align 8
  %4 = getelementptr inbounds %struct.bitstream, %struct.bitstream* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.bitstream*, %struct.bitstream** %2, align 8
  %7 = getelementptr inbounds %struct.bitstream, %struct.bitstream* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = sdiv i32 %8, 8
  %10 = sub nsw i32 %5, %9
  %11 = load %struct.bitstream*, %struct.bitstream** %2, align 8
  %12 = getelementptr inbounds %struct.bitstream, %struct.bitstream* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = icmp sgt i32 %10, %13
  %15 = zext i1 %14 to i32
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
